test/1.2/errors/T_EAUTOPARAM.dml
/*
  © 2021 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
device test;
import "testing.dml";

port p0 {
    /// ERROR EAUTOPARAM
    parameter foo auto;
}

port p1 {
    parameter bar auto;
    /// ERROR EAUTOPARAM
    parameter bar = 1;
}

port p2 {
    /// ERROR EAUTOPARAM
    parameter qname default "";
}

port p3 {
    /// ERROR EAUTOPARAM
    parameter qname = "";
}

attribute a1[i in 0..3] {
    /// ERROR EAUTOPARAM
    parameter i = 1;
}

/// ERROR EAUTOPARAM
attribute a2[dev in 0..3];
